syntax = "proto3";
package fitness_aggregator.v1;

option go_package = "gitlab.com/purposeless-lab/monorepo/fitness-aggregator/server/api/proto/v1";

import "google/protobuf/timestamp.proto";

enum Gender {
  GENDER_UNKNOWN = 0;
  FEMALE = 1;
  MALE = 2;
}

message NameIDPair {
  string id = 1;
  string name = 2;
}

message Person {
  string id = 1;
  string phone = 2;
  string name = 3;
  string picture_uri = 4;
  google.protobuf.Timestamp birth_date = 5;
  Gender gender = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;

  repeated NameIDPair classes_info = 9;
}

message Client {
  string id = 1;
  string phone = 2;
  string name = 3;
  string picture_uri = 4;
  google.protobuf.Timestamp birth_date = 5;
  Gender gender = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;

  repeated NameIDPair classes_info = 9;

  string password = 10;
}

message Trainer {
  string id = 1;
  string phone = 2;
  string name = 3;
  string picture_uri = 4;
  google.protobuf.Timestamp birth_date = 5;
  Gender gender = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;

  repeated NameIDPair classes_info = 9;
  NameIDPair studio_info = 10;
}

message Studio {
  string id = 1;
  string address = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;

  repeated NameIDPair classes_info = 5;
  repeated NameIDPair trainers_info = 6;
}

message Class {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp time = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;

  NameIDPair studio_info = 6;
  NameIDPair trainer_info = 7;
  repeated NameIDPair clients_info = 8;
}